$Id$

2022-01-01  Christian Franke  <franke@computer.org>

	Happy New Year!  Update copyright year in version info.

2022-01-01  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: add more json support: SAS transport
	settings (partial) and some tape drive. Please review.

2021-12-29  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: add more json support: logical_unit_id,
	protection_type and lb_provisioning

2021-12-29  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: applied patch proposed by Yannick Hemery at:
	https://github.com/yhemery/smartmontools/commit/
	cf8462bbf395386c239ea587a26777f2de44f8d6 [note: that url has
	been line wrapped]. It is to cope with a Samsung SAS SSD that
	considers the "Supported log pages" log page [0x0,0x0] and 
	the "Supported log pages and subpages" log page [0x0,0xff]
	as two sub-inventories that must be merged (i.e. a set
	union) rather than [0x0,0xff] being a superset of [0x0,0x0].
	Samsung seems to be alone in that interpretation.

2021-12-21  Douglas Gilbert  <dgilbert@interlog.com>

	expermimental: add support for printing the SCSI Environmental
	Reporting log (sub)page [0xd,0x1] via the -l scttemp option
	and select it when '-x' is given. Also generate json output.
	Outputs temperature and relative humidity current values and
	various min/max values. Manpage has not been updated as this
	may not be the best way to hook this in.

2021-12-21  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: fix listing of subpages as proposed by Yannick
	Hemery <yannick.hemery@corp.ovh.com> in in smt's github pull/122

2021-12-18  Christian Franke  <franke@computer.org>

	smartd.cpp: Windows: Add new option '--warn-as-user=restricted'.
	If specified, the warning script is run with a restricted access
	token.

	os_win32/popen_win32.cpp, os_win32/popen.h: Add new functions
	'popen_as_restr_user()' and 'popen_as_restr_check()' and a TEST
	program.

	smartd.8.in: Document new functionality.
